<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pidafacil.pidafacil.activities.RegisterActivity"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/lay_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp">

            <EditText
                android:id="@+id/txt_email_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/pwd_placeholder"
                android:imeOptions="actionNext"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txt_password_confirm_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pwd_repeat_placeholder"
                android:imeOptions="actionDone"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/button_register__"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:background="@drawable/b_button"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="@string/btn_sign_up"
                android:textSize="@dimen/text_big"
                android:textColor="@color/white"/>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
