<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/content_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_payment_method_label"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_pay_mth"
                android:layout_marginTop="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:prompt="@string/paymethodStr"
                android:entries="@array/paymentMths"
                android:layout_gravity="center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_cash"
            android:background="@drawable/background_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_label"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_big"/>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar_sign"
                        android:textSize="@dimen/text_big"/>

                    <Spinner
                        android:id="@+id/cash_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/change_label"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_big" />

                <TextView
                    android:id="@+id/txt_change"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0.00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/pay_total"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_really_big" />

                <TextView
                    android:id="@+id/txt_to_pay"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_really_big"
                    android:text="$0.00" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_owner"
                android:textColor="@color/white"
                android:inputType="textCapWords"
                android:paddingBottom="20dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_credit_num"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:hint="@string/card_number"
                    android:textColor="@color/white"
                    android:inputType="number"/>

                <ImageView
                    android:id="@+id/img_card__"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/credit" />

            </LinearLayout>

            <EditText
                android:id="@+id/txt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/card_code"
                android:textColor="@color/white"
                android:inputType="number"/>

            <LinearLayout
                android:padding="20dp"
                android:background="@drawable/background_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date_label"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_label"/>

                    <Spinner
                        android:id="@+id/spinner_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/spin_mes"
                        android:textAlignment="center"
                        android:entries="@array/months_arr"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_label"/>

                    <Spinner
                        android:id="@+id/spinner_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/spin_year"
                        android:layout_margin="10dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_tgMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>



            <LinearLayout
                android:padding="20dp"
                android:background="@drawable/background_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date_label"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_label"/>

                    <Spinner
                        android:id="@+id/spinner_tgMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/spin_mes"
                        android:textAlignment="center"
                        android:entries="@array/months_arr"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_label"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <Button
            android:id="@+id/button_ok"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_btn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="@dimen/text_big"
            android:background="@drawable/button_shape" />

    </LinearLayout>

</ScrollView>
